--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-google-generativeai==0.5.4
-Pillow==10.2.0
+
+Pillow
 folium==0.20.0
-Flask==3.0.0 
+Flask
 fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
